crates/rome_cli/tests/snapshots/main_commands_ci/ci_does_not_organize_imports_via_cli.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
import { lorem, foom, bar } from "foo";
import * as something from "../something";

```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


