crates/rome_cli/tests/snapshots/main_commands_ci/ci_errors_for_all_disabled_checks.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json

{
    "formatter": {
        "enabled": true
    },
    "linter": {
        "enabled": true,
        "rules": {
            "recommended": true
        }
    }
}

```

## `file.js`

```js
statement(    ) ; let a = !b || !c;
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The combination of configuration and arguments is invalid: 
    Formatter and Linter are both disabled, can't perform the command. This is probably and error.
  


```


