crates/rome_cli/tests/snapshots/main_commands_ci/ci_lint_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `ci.js`

```js
for(;true;);

```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
ci.js:1:1 lint/style/useWhile  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Use while loops instead of for loops.
  
  > 1 │ for(;true;);
      │ ^^^^^^^^^^^
    2 │ 
  
  i Suggested fix: Use a while loop
  
    1   │ - for(;true;);
      1 │ + while·(true);
    2 2 │   
  

```

```block
ci.js:1:6 lint/nursery/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 1 │ for(;true;);
      │      ^^^^
    2 │ 
  

```

```block
ci.js lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there are still diagnostics to address.
  

```

```block
ci.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1 │ for·(;·true;·);
      │    +  +     +  

```

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  

```

```block
Checked 1 file(s) in <TIME>
```


