crates/rome_cli/tests/snapshots/main_commands_ci/ci_ok.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `ci.js`

```js
statement();

```

# Emitted Messages

```block
Checked 1 file(s) in 10ms
```


